# tags2db

./: .editorconfig  COPYING  Makefile.am  README  autogen.sh  configure.in  ctags.c  db_sqlite3.c  global.h  index.html  tags2db.c  tags_ctags.c  tags_ctags.h  utils.c  utils.h
m4/: ax_lib_sqlite3.m4
src/: Makefile.am  db_sqlite3.c  db_sqlite3.h  global.h  record.c  record.h  tags2db.c  tags_ctags.c  tags_ctags.h  tags_gccxml.c  tags_gccxml.h  utils.c  utils.h
