AC_PREREQ(2.59)
AC_INIT(tags2db.c, 0.9git, xuhdev@gmail.com)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(tags2db, 0.9git)
AC_CONFIG_MACRO_DIR(m4)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# check for sqlite3. Currently it is necessary.
AX_LIB_SQLITE3
echo $HAVE_SQLITE3
if test "$success" = "yes"; then
    CFLAGS="$CFLAGS $SQLITE3_CFLAGS"
    LIBS="$LIBS $SQLITE3_LDFLAGS"
else
    AC_MSG_ERROR(Sqlite3 not found.)
fi

# gccxml
AC_ARG_ENABLE(gccxml,
              [  --enable-gccxml  Enable gccxml support],
              [ENABLED_GCCXML="$enableval"],
              [ENABLED_GCCXML=yes])

if test "x$ENABLED_GCCXML" = "xyes"; then
    AM_PATH_XML2(2.0.0,
                 [CPPFLAGS="$CFLAGS $XML_CPPFLAGS"
                  LIBS="$LIBS $XML_LIBS"],
                  [AC_MSG_ERROR(Libxml2 is not found. Run ./configure with
                   "--disable-gccxml" to disable gccxml support.)])

    AC_DEFINE([ENABLED_GCCXML], [1],
              [Define if you want to build with gccxml support])
fi

# Checks for header files.

#check for headers that we must have
AC_CHECK_HEADERS([stddef.h stdio.h stdlib.h string.h],
                 [],
                 [AC_MSG_ERROR(Some essential header files are not found.)])

# check for optional headers
AC_CHECK_HEADERS([inttypes.h stdint.h])
AC_HEADER_STDBOOL

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT8_T
AC_CHECK_TYPES([size_t])

# Checks for library functions.

# we check malloc here but not using AC_FUNC_MALLOC because we don't need a gcc
# compatible malloc
AC_CHECK_FUNCS( \
               fclose \
               fileno \
               fgets \
               fopen \
               fprintf \
               free \
               malloc \
               memmove \
               memset \
               perror \
               printf \
               strcat \
               strchr \
               strcmp \
               strdup \
               strlen \
               strncpy \
               strrchr \
               strstr \
               strtok,
               [],
               [AC_MSG_ERROR(Some essentially required function not found.)]
               )

# non-essential functions
AC_CHECK_FUNCS( \
               strndup)

AC_OUTPUT([Makefile src/Makefile])
